2016-06-17  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-elf-sim.py.in: Check for --host argument in
	PATH, not just in the current working directory.

2016-03-13  Ola Jeppsson  <ola@adapteva.com>

	* epiphany-fp.c (extract_mant): Declare as static inline.
	(extract_exp): Likewise.
	(extract_sign): Likewise.
	(isDenormalOrZero): Likewise.
	(isDenormal): Likewise.
	(makeZero): Likewise.
	(makeNegative): Likewise.
	(makePositive): Likewise.
	(isZero): Likewise.
	(isNegative): Likewise.
	(isInf): Likewise.
	(isNAN): Likewise.
	(makeNAN): Likewise.
	* oob-events.c (epiphany_handle_oob_events): Don't declare as
	inline.
	* oob-events.h (epiphany_handle_oob_events): Update function
	prototype.

2016-02-15  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_validate_cluster_cfg): Use ULL postfix for
	comparing 64 bit values.

2016-01-12  Ola Jeppsson  <ola@adapteva.com>

	* sim-main.h (CPU_SCR_WRITESLOT_LOCK) (CPU_SCR_WRITESLOT_RELEASE)
	(CPU_WAKEUP_WAIT) (CPU_SCR_WAKEUP_SIGNAL) (CPU_SCR_WRITESLOT_EMPTY)
	(CPU_SCR_WRITESLOT_WAIT) (CPU_SCR_WRITESLOT_SIGNAL): Add cpu argument
	to macros.
	* mloop.in: Provide cpu argument to above macros.
	* esim/esim-int.h: Add ES_CPU helper macro.
	* esim/esim.c (es_shm_mmr_write): Break cyclic deadlocks. Update
	function arguments.
	(es_shm_tx_mmr_write): Update to match es_shm_mmr_write() arguments.
	(es_wand_propagate_se): Likewise.

2015-12-14  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_set_simcmd): Exit silently when called if
	core is inactive.
	(epiphany_trap): In operating environment, don't call sim_halt() on
	exit (trap #3). Instead, set halt bit in debugstatus and
	return.

2015-12-14  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphanybf_cpu_reset): Reset H_INT_IDLE_BIT and
	H_HWLOOP_NEXT.

2015-12-13  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_client_get_raw_pointer): Implemented.
	* esim/esim.h (es_client_get_raw_pounter): Add function prototype.
